# ets2_autopilot2

./: README.md  main.py  pyproject.toml  requirements.txt  telemetry_test.py
ets2_autopilot/: calc_input.py  imgproc.py  send_input.py  telemetry.py  test_imgproc.py
ets2_imgproc/: __init__.py  constants.py  contours_to_centreline.py
ets2_telemetry/: README.md  __init__.py  all_values.py  control_values.py  general_info.py  physics_values.py  sdk_values.py  telemetry.py  truck_values.py  user_inputs.py
tests/: __init__.py  constants.py  test_imgproc.py  test_road_feature_detection.py
